--- a/docs/ChangeLog.txt
+++ b/docs/ChangeLog.txt
@@ -1,3 +1,6 @@
+1.4 -> 1.5 : UNRELEASED
+    - Fixed lib/getopt_afs to use modern exceptions instead of strings
+
 1.3 -> 1.4 : ?/?/????
     - Added code in repcheck to make sure there is at least a replica on the
       same site as the RW if the volume is replicated.
